syntax = "proto3";
import "Role.proto";
//protoc --proto_path=src\main\java\com\hailintang\client\protobuf --java_out=src\main\java src\main\java\com\hailintang\client\protobuf\MsgAuctionInfo.proto
option java_package = "com.hailintang.client.protobuf.protoc";
option java_outer_classname = "MsgAuctionInfoProto";

enum RequestType{
    BIDDING = 0;
    RECYCLE = 1;
    PUBLISH = 2;
    QUERYAUCTION = 3;
}

message RequestAuctionInfo{
    string requestId = 1;       // 请求id
    int32 userId = 2;           // 请求的uid
    string auctionId = 3;            //目的地
    RequestType type = 4;      // 请求类型
    string money = 5;
    string goodsName = 6;
    string number = 7;
    string isNow = 8;
}

message ResponseAuctionInfo{
    int32 result = 1;           // 返回结果
    int32 userId = 2;           // 返回的uid
    string content = 3;         // 返回内容

    RequestType type = 4;       // 返回类型

    Role role = 5;          // 用户角色
}